# coro_edge_energy

./: .gitignore  .gitmodules  LICENSE  README.md
cppsource/: .gitignore  CMakeLists.txt  infer7.cpp  readme.md
cppsource/data/: gpio.csv
cppsource/include/: bounded_random.h  common.h  fixed_point.h  gpio.h  prefetch1.h  run_coro.h  svm.h  timer.h  utils.h  uuid.h
cppsource/include/fpm/: math.hpp
cppsource/include/perf/: pe_assist.h  pe_assist_cpp.h  pe_context.h  pe_monitor_coll.h  pe_summaries.h  perf_rec.h
cppsource/perf/: pe_assist.cpp  pe_assist_coll.cpp  pe_assist_cpp.cpp  pe_cortex_a72.c  pe_intel_x64.c  pe_monitor.cpp
cppsource/scripts/: run_infer_l_sync.sh
cppsource/test/: svm_test.cpp  svm_test_fp.cpp
docs/: raspberrypi.md  windows_swl2_ubuntu.md  wiringpi.md
notebooks/: examine_spikes.ipynb
python/: .gitignore  environment.yml  extract_spikes.py  mad.py  readme.md  run_infer7.py  test_extract.py
python/results4/: experiments.csv  readme.txt
python/results5/: experiments.csv  readme.txt
